@@ -46,8 +46,8 @@ def devices_to_load():
     :return: specification of the devices to be loaded
     :rtype: dict
     """
-    # TODO: Once MCCS-244 is resolved, we should reinstate the APIUs and antennas in
-    # these tests.
+    # TODO: Once https://github.com/tango-controls/cppTango/issues/816 is resolved, we
+    # should reinstate the APIUs and antennas in these tests.
     return {
         "path": "charts/ska-low-mccs/data/configuration_without_antennas.json",
         "package": "ska.low.mccs",
@@ -111,7 +111,7 @@ def devices(tango_context):
         "tile_0002": tango_context.get_device("low-mccs/tile/0002"),
         "tile_0003": tango_context.get_device("low-mccs/tile/0003"),
         "tile_0004": tango_context.get_device("low-mccs/tile/0004"),
-        # workaround for MCCS-244
+        # workaround for https://github.com/tango-controls/cppTango/issues/816
         # "apiu_001": tango_context.get_device("low-mccs/apiu/001"),
         # "antenna_000001": tango_context.get_device("low-mccs/antenna/000001"),
         # "antenna_000002": tango_context.get_device("low-mccs/antenna/000002"),
